# rl-health-interventions

./: .gitignore  AGENTS.md  AUDIT_MASTER.md  CONTRIBUTING.md  ISSUE-112-PROMPT.md  LICENSE  PROMPT.md  PROMPT_PHASE1.md  PROMPT_PHASE2.md  PROMPT_PHASE3.md  PROMPT_PHASE4.md  README.md  REVIEW_LOG.md  ROADMAP.md  VERIFICATION_REPORT.md  clinical_outcome.py  fix.py  opencode.json  orchestrator_prompt.md  pyproject.toml  results.csv  results.jsonl  results_heartsteps.json  reward.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  task.md  task.yml
.github/PULL_REQUEST_TEMPLATE/: audit_pr.md  default.md  experimental_feature.md  feature.md
.github/issues/: issue-dqn-policy-gradient.md  issue-enrich-state-space.md  issue-extend-action-space.md  issue-llm-bootstrapping.md  issue-persona-transition-matrices.md  issue-simulator-design-section.md
.github/workflows/: ci.yml  enforce-issue-template.yml  require-linked-issue.yml  thread-check.yml
.opencode/agents/: multimodal.md  python-engineer.md  scout.md
.opencode/metrics/: write-size-violations.jsonl
.opencode/plugins/: write-size-guard.ts
.opencode/plugins-available/: auth-check.ts  session-lifecycle.ts  tool-observer.ts
.review-output/: result_api.md  result_logic.md  result_security.md  result_tests.md
.reviews_and_reports/audit-2026-06-11/: PR_DESCRIPTION.md  orchestrator_prompt.md
.reviews_and_reports/improve-2026-06-17/: pr103_improvement_plan.md  pr103_plan_v0.md  pr103_plan_v1.md
.reviews_and_reports/pr-85-review/: pr-85-review.md
.reviews_and_reports/review-2026-06-09/: combined.md  result_style.md
config/: contextual_thompson.yaml  heartsteps.yaml  learned.yaml  learned_aspirational.yaml  llm_based.yaml  llm_based_aspirational.yaml  mvp.yaml  pearl_constitution.yaml  rule_based.yaml  rule_based_with_mask.yaml
config/datasets/: 4tu_step_goals.yaml  allofus_fitbit.yaml  bidsleep.yaml  dreamt.yaml  extrasensory.yaml  fitbit_tracker.yaml  harth.yaml  mhealth.yaml  pmdata.yaml  scientisst_move.yaml  stepcountjitai.yaml  synthetic.yaml  wesad.yaml  wisdm.yaml
config/experiments/: 1b_states_only.yaml  1c_reward_only.yaml
config/pearl/: comb_scores.json
configs/datasets/: all_of_us_fitbit.yaml  uk_biobank_accelerometer.yaml
data/bootstrap/: results_base.jsonl  results_base_deepseek-v4-flash_08:35_10:07:26.jsonl
docs/: 01 Codebase Plan.md  01 Subphase 1A Data Layer.md  01-subphase-1a-data-layer.md  02 MDP Specification.tex  02 Subphase 1B MDP Environment.md  02-subphase-1b-mdp-environment.md  03 Data Sources.md  03 Subphase 1C User Simulation.md  03-subphase-1c-user-simulation.md  04 Additional Data Sources.md  04 Subphase 1D Agent Library.md  04-subphase-1d-agent-library.md  05 All of Us Fitbit Dataset.md  05 DREAMT Dataset.md  05 Master Dataset Catalogue.md  05 StepCountJITAI Dataset.md  05 Subphase 1E Experiment Runner.md  05-subphase-1e-experiment-runner.md  05_4tu_pa_coaching_datasets.md  05_bidsleep_dataset.md  05_wesad_dataset.md  06 Code Design.md  07-data-availability-schema.md  AGENTS.md  Phase 1 - Execution Plan.md  README.md  ROADMAP.md  ROADMAP_TECHNICAL_DEPS.md  contents.md  design.tex  initial_design.tex  phase-1-execution-plan.md  references.bib
docs/archive/: ARCHIVE_LOG.md  contents.md
docs/code/: code_design.md  codebase_plan.md  phase_1_execution_plan.md  subphase_1b_mdp_environment.md  subphase_1c_user_simulation.md  subphase_1e_experiment_runner.md
docs/decisions/: initial_design.tex  online-vs-offline-rl.md  resolved-decisions-sprint-1.md
docs/design/: initial_design.tex  references.bib
docs/guides/: plans-overview.md
docs/initial_experiments/: 1a_actions_only.tex  _experiment_utils.py  chart_generator.py  hyperparam_results.csv  hyperparam_search.py  initial_experiments.tex  run_1a_experiments.py  run_1b_benchmark.py  run_1c_experiments.py  run_experiments.py
docs/learned/: learned_specification.tex
docs/llm/: llm_specification.tex
docs/mvp/: benchmark_all_agents.py  chart_generator.py  design.tex  extensions.tex  generate_chart.py  hyperparam_results.csv  hyperparam_search.py  mvp.tex  mvp_specification.tex  run_experiments.py
docs/overview/: ROADMAP.md  ROADMAP_TECHNICAL_DEPS.md  project-roadmap.md
docs/plans/: README.md  ROADMAP.md  ROADMAP_TECHNICAL_DEPS.md  learned_transitions.md  phase-2-pearl-matched-config.md  roadmap-technical-deps.md  subphase_1a_data_layer.md
docs/research/: README.md  SUPERVISOR_SUMMARY.md  decision-catalogue.md  framework-comparison.md  future-sprints.md  lit-review-state-action-space.md  llm_prompting.md  opencode-zen-benchmark.md  pearl-constitution.md  research-gaps-wearable-fm.md  resolved-decisions-sprint-1.md  sim-francisco-connections.md  statistical-analysis-plan.md
docs/sources/: 4tu-coaching-datasets.md  4tu_coaching_datasets.md  additional-data-sources.md  additional_data_sources.md  all-of-us-fitbit-dataset.md  all_of_us_fitbit_dataset.md  data-sources.md  (+11 more)
paper_reproduction/: PLAN.md
plans/: pr-190-config-migration.md
reports/: audit_code_quality.md  audit_docs.md  phase1_design_analysis.md  phase2_orchestrator_analysis.md  phase4_all_issues.json  phase4_issue_summary.md  phase4a_issues.json  phase4b_issues.json  phase4c_issues.json  phase4d_issues.json  phase5_swarm_audit_synthesis.md
scripts/: analyze_bootstrap.py  build_participant_meta.py  download_weather.py  eda_all_datasets.py  generate_pearl_tables.py  generate_regression_fixture.py  llm_bootstrap_transitions.py  run_1c_experiments.py  run_deep_rl_cross_variant.py  run_heartsteps_study.py  visualize_transitions.py  visualize_transitions_v2.py
tests/: conftest.py  test_agent.py  test_bayesian_regression.py  test_clinical_reward.py  test_cross_validation.py  test_dosage.py  test_generative_model.py  test_import.py  test_nhanes_loader.py  test_nightly_update.py  test_prior_construction.py  test_proxy_value.py  test_regression_mvp.py  test_reward.py  test_run_study.py  test_ts_bandit.py  test_tuning.py
viz/: citations.json  curate.py  frontier.py  index.html  validate_full_dataset.py  validation_full_report.json
(+523 files in other folders)
